getCinemaScheduleByMovie
